feat(kassensystem): added kasse:filiale microservice architecture feat(api): added account and article controller feat(api): added jwt token authentication to REST communication feat(service): added proxy services feat(mapper): added dto mappers feat(security): changed spring-security CustomUserDetails to Account and AccountDTO respectively fix(pom): fixed child poms inheriting wrong dependency versions